<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/selSettings"
        android:title="@string/settings"
        />
    <item
        android:id="@+id/selAbout"
        android:title="@string/about"
        />
</menu>