...

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:stateListAnimator="@animator/raise"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
...
